# AlgoBlocks

./: .gitignore  .replit  README.md  app.py  pyproject.toml  replit.nix
.streamlit/: config.toml
attached_assets/: Pasted-AlgoBlocks-Empowering-the-Future-of-Algorithmic-Trading-With-the-increasing-complexity-of-finan-1744811971586.txt
components/: backtester.py  block_canvas.py  data_viewer.py  paper_trading.py  performance_dashboard.py  strategy_builder.py
static/: blocks_data.py
utils/: backtest.py  blocks.py  data.py  indicators.py  performance.py  strategy.py
